fixed a bit